# penseller

./: README.md  docker-compose.yml  init_data.py  main.py  output.txt  pyproject.toml  sample.env  save_shampoo_landing_page.py
apps/backend/: Dockerfile  requirements.txt
apps/backend/app/: main.py  schema.py  workflow.py
apps/backend/app/fal/: text_to_image.py
apps/backend/app/llm/: prompts.py
apps/backend/app/scraper/: linkedin_scraper.py
apps/backend/app/utils/: __init__.py  logger.py
apps/landing_page/: .dockerignore  Dockerfile  README.md  index.html
apps/landing_page/src/: App.tsx  index.css
apps/landing_page/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Testimonials.tsx
apps/landing_page/src/pages/: Index.tsx
fal/: text_to_image.py
llm/: prompts.py
scraper/: linkedin_scraper.py
